Rydder bruk av simuleringXml lagring og gått over til secure logg.